recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: not found: value shrinkle
avance(l*shrinkle)
         ^Tree:17: error: not found: value shrinkle
avance(l*shrinkle)
         ^