recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
var s= steps
var l=length
var n=0

current(s)
avance(l)
var x=getX()
var y=getY()
current(s-1)
droite(angle)
avance(l*shrinkle)
setPos(x,y)
gauche(angle)
gauche(angle)
avance(l*shrinkle)
}
